--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="/static/logo.ico">
     <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
     <link rel="stylesheet" href="/static/fonts/font_2759798_guh4j1rx3co/iconfont.css">
+    <script src="/static/js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <style>
     .mydiv{
         background-color: #c5e0c8;
@@ -31,8 +33,21 @@
         background: linear-gradient(to top,black,deeppink);
         -webkit-background-clip: text;
     }
-
-</style>
+    .addurl-div{
+        box-shadow: 4px 4px 8px gray;
+        height: 200px;
+        width: 350px;
+        border: 1px solid black;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        background-color: white;
+        padding: 10px;
+        text-align:center;
+        transform:translateX(-50%) translateY(-50%);
+        display: none;
+    }
+    </style>
 </head>
 
 <body>
@@ -46,6 +61,7 @@
 
 
 <div style="height: 450px;" class="mydiv">
+<h3 style="text-align: center;">欢迎使用测试平台超链接传送门：<span>新增<span class="add_btn"><a href="#">点我</a></span>   </span></h3>
     <ul id="myul">
         {% for i in hrefs %}
             <li>
@@ -53,6 +69,17 @@
             </li>
         {% endfor %}
     </ul>
+</div>
+<div class="addurl-div" id="addurl">
+    <h3>新增超链接</h3>
+    <input type="text" id="url_name" placeholder="请输入链接名称（最多20字）" style="width: 80%">
+    <br>
+    <br>
+    <input type="text" id="url_content" placeholder="请输入超链接" style="width: 80%">
+    <br>
+    <br>
+    <button class="btn btn-success" style="float: right;" onclick="add_url()">确定</button>
+    <button class="btn btn-danger" style="float: right; margin-right: 10px;" onclick="javascript: $('.addurl-div').css('display','none')">取消</button>&nbsp;&nbsp;&nbsp;&nbsp;
 </div>
 
 <div style="height:200px; "class="mydiv">
@@ -65,9 +92,33 @@
 </div>
 
 <script>
+    $(function (){
+        $(".add_btn").click(function (){
+            {#console.log(document.getElementById("addurl").innerText)#}
+            document.getElementById("addurl").style.display='block';
+            {#$("#addurl").style.display='block';#}
+        });
+
+    });
+</script>
+
+<script>
     function url_readcount(id){
         $.get('/read/',
             {"id":id}
+        )
+    }
+    function add_url(){
+        url_name=$("#url_name").val();
+        url_content=$("#url_content").val();
+        $.get('/addurl/',
+            {
+                "url":url_content,
+                "url_name":url_name
+            },
+            function (ret){
+                document.location.reload();
+            }
         )
     }
     {#vue构造器#}
