--- a/myapp/templates/menu.html
+++ b/myapp/templates/menu.html
@@ -315,7 +315,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="Shortcodes">官方工具 <span
                         data-hover="Shortcodes"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">构造房源</a></li>
+                    <li><a href="/GM_tools/house/" target="_blank">构造房源</a></li>
                     <li><a href="#">构造订单</a></li>
                 </ul>
             </li>
@@ -331,9 +331,9 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="Pages">基础设施 <span
                         data-hover="Pages"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">数据库组件</a></li>
-                    <li><a href="#">服务器组件</a></li>
-                    <li><a href="#">变量设置</a></li>
+                    <li><a href="/admin/myapp/db_sql/" target="_blank">数据库组件</a></li>
+                    <li><a href="/admin/myapp/db_linux/" target="_blank">服务器组件</a></li>
+                    <li><a href="/admin/myapp/db_par/" target="_blank">变量设置</a></li>
                     <li><a href="#">环境设置</a></li>
                 </ul>
             </li>
@@ -341,9 +341,10 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="Pages">平台管理 <span
                         data-hover="Pages"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">数据统计</a></li>
-                    <li><a href="#">用户管理</a></li>
-                    <li><a href="#">超链接管理</a></li>
+                    <li><a href="#" target="_blank">数据统计</a></li>
+                    <li><a href="#" target="_blank">用户管理</a></li>
+                    <li><a href="/admin/myapp/db_href/" target="_blank">超链接管理</a></li>
+                    <li><a href="/admin/myapp/db_notice/" target="_blank">公告管理</a></li>
                     <li><a href="/admin/" target="_blank">进入后台</a></li>
                 </ul>
             </li>
