--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>测试开发干货</title>
+    <title>TMDS测试平台</title>
     <link rel="shortcut icon" href="/static/logo.ico">
     <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
     <link rel="stylesheet" href="/static/fonts/font_2759798_guh4j1rx3co/iconfont.css">
